--- a/mongodb/templates/statefulset.yaml
+++ b/mongodb/templates/statefulset.yaml
@@ -53,7 +53,7 @@ metadata:
 spec:
   ports:
   - protocol: TCP
-    port: 27017 #service-port
+    port: 27017 
     targetPort: 27017
   clusterIP: None
   selector:
