--- a/catalogue/templates/deployment.yaml
+++ b/catalogue/templates/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
     project: roboshop
     tier: app
 spec:
-  replicas: "{{ .Values.deployment.replicas }}"
+  replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels: # these labels are used to find the pods
       app: catalogue
@@ -33,8 +33,8 @@ spec:
             cpu: "100m"
             memory: "256Mi"
         envFrom:
-         - configMapRef:
-             name: catalogue
+        - configMapRef:
+            name: catalogue
 ---
 apiVersion: v1
 kind: Service
