--- a/cart/templates/deployment.yaml
+++ b/cart/templates/deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -9,7 +8,7 @@ metadata:
     project: roboshop
     tier: app
 spec:
-  replicas: "{{ .Values.deployment.replicas }}"
+  replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels: # these labels are used to find the pods
       app: cart
@@ -34,8 +33,8 @@ spec:
             cpu: "100m"
             memory: "256Mi"
         envFrom:
-         - configMapRef:
-             name: cart
+        - configMapRef:
+            name: cart
 ---
 apiVersion: v1
 kind: Service
