--- a/user/templates/deployment.yaml
+++ b/user/templates/deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -9,7 +8,7 @@ metadata:
     project: roboshop
     tier: app
 spec:
-  replicas: "{{ .Values.deployment.replicas }}"
+  replicas: {{ .Values.deployment.replicas }}
   selector:
     matchLabels: # these labels are used to find the pods
       app: user
@@ -34,8 +33,8 @@ spec:
             cpu: "100m"
             memory: "256Mi"
         envFrom:
-         - configMapRef:
-             name: user
+        - configMapRef:
+            name: user
 ---
 apiVersion: v1
 kind: Service
