--- a/shipping/templates/deployment.yaml
+++ b/shipping/templates/deployment.yaml
@@ -39,11 +39,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalogue
+  name: shipping
   namespace: roboshop
 spec:
   selector:
-    app: catalogue
+    app: shipping
     project: roboshop
     tier: app
   ports:
